<resources>
    <string name="app_name">BreesApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="AppName">Brees</string>
    <string name="onb_t_1">Gain statistics of your money</string>
    <string name="onb_t_2">Providing statistics on deposits and transfers per month</string>
    <string name="onb_t_3">Gain total control of your money</string>
    <string name="onb_t_4">Track your transaction easily, with  financial report</string>
    <string name="onb_t_5">Exchange of emails</string>
    <string name="onb_t_6">Fast and easy exchange of letters between users.</string>
    <string name="Cont">Next</string>
    <string name="get_started">Get started</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">gg</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_brees">Welcome to Brees</string>
    <string name="complete_the_sign_up">Complete the sign up to get started</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_text">By signing up, you agree to the <a href="https://www.freeprivacypolicy.com/live/0320d475-888f-4f38-94f8-7bf737c2d0a7">Terms of \nService</a> and <a href="https://www.freeprivacypolicy.com/live/0320d475-888f-4f38-94f8-7bf737c2d0a7">Privacy Policy</a></string>
    <string name="reg">Register</string>
    <string name="login">Login</string>
    <string name="forgot_pin">Forgot PIN code?</string>
    <string name="pin_en">Enter PIN</string>
    <string name="conf_pin">Confirm PIN</string>
    <string name="welcome_back_brees">Welcome back</string>
    <string name="back_fill">Hey you’re back, fill in your details to get back in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_lenght_error">Password must be more than 8 characters and less than 20</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="terms_error">Please confirm your agreement to the terms of service and privacy policy</string>
    <string name="empty_error">All fields must be filled in</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="recovery1">Enter your email and we’ll send you a code to reset your password.</string>
    <string name="Continue">Continue</string>
    <string name="recovery_t_1">Your email is on the way</string>
    <string name="recovery_text">Enter the verification code we just sent to your email: </string>
    <string name="recover_title">OTP Verification</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="resend">Resend</string>
    <string name="password_recovery">Password recovery</string>
    <string name="set_your_password">Set your password</string>
    <string name="recovery_2_text">Check your email test@test.com and follow the instructions to reset your password</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="contact">Contact</string>
    <string name="phone_number">Phone number</string>
    <string name="email_error">Wrong email format</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reset_password">Reset Password</string>
    <string name="security">Security</string>
    <string name="general">General</string>
    <string name="brees_2025_v1_0">Brees © 2025 v1.0</string>
    <string name="topic_details">Topic Details</string>
    <string name="view_topic">View Topic</string>
    <string name="your_finances_are_looking_good">Your finances are looking good</string>
    <string name="your_available_balance_is">Your available balance is</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="transactions">Transactions</string>
    <string name="top_up_your_balance">Top up your balance</string>
    <string name="top_up_balance">Top up balance</string>
    <string name="enter_the_amount">Enter the amount of money you want to top up your balance with. Then click the confirmation button.</string>
    <string name="confirm">Confirm</string>
    <string name="successfully_topped_up">You have successfully topped up your balance.</string>
    <string name="transaction">Transaction</string>
    <string name="money_transfer">Money transfer successfully delivered.</string>
    <string name="amount">Amount</string>
    <string name="transaction_from">"Transaction from "</string>
    <string name="transaction_to">"Transaction to "</string>
    <string name="transactions_details">Transactions Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="amount_range">Amount Range</string>
    <string name="transaction_hint">Enter the amount and the recipient\'s email address to whom you want to transfer the money. Then click the confirmation button.</string>
    <string name="please_enter_an_email_of_recipient">Please, enter an email of recipient</string>
    <string name="please_enter_an_amount_money_for_transaction">Please, enter an amount money for transaction</string>
    <string name="statistic">Statistic</string>
    <string name="mail">Mail</string>
    <string name="spent_per_month">Spent per month</string>
    <string name="received_per_month">Received per month</string>
    <string name="transactions_per_month">Transactions per month</string>
    <string name="search_in_mail">Search in mail</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="starred">Starred</string>
    <string name="send">Send</string>
    <string name="file_attach">File attach</string>
    <string name="file_not_attached">File not attached</string>
    <string name="delete">Delete</string>
    <string name="add_to_group">Add to group</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete_from_group">Delete from group</string>
    <string name="letter_not_in_group">Letter not in group</string>
    <string name="success1">Success</string>
    <string name="error">Error</string>
    <string name="recipient_email">Recipient email</string>
    <string name="letter_theme">Letter theme</string>
    <string name="letter_text">Letter text...</string>
    <string name="you_can_t_transfer_money_to_yourself">You can`t transfer money to yourself</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="error_profile_load">Error profile load</string>
    <string name="error_group_load">Error group load</string>
    <string name="file_attached">File attached</string>
    <string name="letter_send_success">Letter send success</string>
    <string name="error_in_group_create">Error in group create</string>
    <string name="success_group_create">Success group create</string>
</resources>