<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity"
    android:background="@drawable/bg_lgray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_28pt_regular"
        android:textAlignment="center"
        android:textSize="18sp"
        android:id="@+id/title_text"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_brees"
        android:textSize="24sp"
        android:fontFamily="@font/inter_28pt_bold"
        android:textColor="@color/dpurple"
        android:id="@+id/welcome"/>

    <TextView
        android:id="@+id/text_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_28pt_regular"
        android:text="@string/complete_the_sign_up"
        android:textColor="@color/dgray"
        app:layout_constraintStart_toStartOf="@id/welcome"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_inp_box"
        android:hint="@string/name"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_cont"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_inp_box"
        android:hint="@string/email"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/NameTextField"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_inp_box"
        android:hint="@string/password"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/EmailTextField"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/main">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ConfPasswordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_inp_box"
        android:hint="@string/confirm_password"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTextField"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/main">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ConfPasswordTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/check_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ConfPasswordTextField"
        app:layout_constraintStart_toStartOf="@id/ConfPasswordTextField"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_text"
        android:fontFamily="@font/inter_28pt_regular"
        android:autoLink="web"
        android:linksClickable="true"
        app:layout_constraintStart_toEndOf="@id/check_terms"
        app:layout_constraintTop_toTopOf="@id/check_terms"
        app:layout_constraintBottom_toBottomOf="@id/check_terms"/>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/reg"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_style"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_28pt_regular"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        />
    
    <Button
        android:id="@+id/login_btn"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/reg_btn_style"
        android:fontFamily="@font/inter_28pt_regular"
        android:textColor="@color/main"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="45dp" />
    
</androidx.constraintlayout.widget.ConstraintLayout>