<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PasswordRecoveryThird"
    android:background="@drawable/bg_lgray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/recovery_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_title"
            android:fontFamily="@font/inter_28pt_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:textColor="@color/dgray"/>

        <TextView
            android:id="@+id/recovery_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/recovery_text"
            app:layout_constraintTop_toBottomOf="@id/recovery_title"
            android:textColor="@color/lgray"
            android:fontFamily="@font/inter_28pt_regular"
            android:layout_marginTop="30dp"/>


        <com.chaos.view.PinView
            android:id="@+id/recoveryPinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recovery_text"
            android:layout_marginTop="50dp"
            android:inputType="number"
            app:viewType="rectangle"
            app:itemRadius="4dp"
            android:textColor="@color/lgray"/>

        <TextView
            android:id="@+id/recovery_dop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lgray"
            android:fontFamily="@font/inter_28pt_regular"
            android:layout_marginTop="30dp"
            android:text="@string/didn_t_receive_code"
            app:layout_constraintTop_toBottomOf="@id/recoveryPinView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TransparentButton"
            android:text="@string/resend"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="@id/recovery_dop"
            app:layout_constraintStart_toEndOf="@id/recovery_dop"
            android:layout_marginStart="10dp"/>


        <Button
            android:id="@+id/recovery_third_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_style"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_28pt_regular"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>