<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TransactionActivity"
    android:background="@drawable/bg_lgray">

    <TextView
        android:id="@+id/title_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_28pt_regular"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_btn_img"
        android:backgroundTint="@color/transperent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/hint_transac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintStart_toStartOf="@id/back_btn"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_28pt_semibold"
        android:textColor="#8F92A1"
        android:text="@string/transaction_hint"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_inp_box"
        android:hint="@string/email"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/hint_transac"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AmountTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_inp_box"
        android:hint="@string/amount"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/EmailTextField"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AmountTextField1"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_Conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>